JFR of JMH for BouncyCastle SM2 Signing
Signed-off-by: Hollow Man <hollowman@opensuse.org>